--- a/tizenbrew-app/TizenBrew/tizenbrew-ui/index.html
+++ b/tizenbrew-app/TizenBrew/tizenbrew-ui/index.html
@@ -5,7 +5,13 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TizenBrew</title>
-    <script type="text/javascript" src="$WEBAPIS/webapis/webapis.js"></script>
+    <script>
+      (function() {
+        var script = document.createElement('script');
+        script.src = '$WEBAPIS/webapis/webapis.js';
+        document.head.appendChild(script);
+      })();
+    </script>
   </head>
   <body>
     <div id="app"></div>
